# deforum

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  deforum.py  install-windows.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  txt2img.py
configs/: cli-modules.yaml
deforum/: __init__.py  cmd.py  deforum.py  general_utils.py  img2img.py  main.py
deforum/animation/: animation.py  animation_key_frames.py  base_args.py  new_args.py  render_modes.py
deforum/avfunctions/: video_audio_utilities.py
deforum/backend/: __init__.py  abstract_pipeline.py  custom_text_encoder.py  sd_pipeline.py
deforum/data/: __init__.py  stopwords_combined.txt
deforum/datafunctions/: parseq_adapter.py  parseq_adapter_test.py  prompt.py  resume.py  seed.py  settings.py  subtitle_handler.py  word_masking.py
deforum/exttools/: __init__.py  cmd.py  depth.py  depth_adabins.py  depth_leres.py  depth_midas.py  depth_zoe.py  infer.py
deforum/mixins/: __init__.py  diffusers_base.py  universal_mixin.py
deforum/modules/: __init__.py
deforum/pipeline/: __init__.py
deforum/pipelines/: __init__.py  base_pipeline.py  deforum_pipeline.py  img2img.py  sd_pipeline.py  txt2img.py  (+2 more)
deforum_inference/: sd_ckpt_model.py  sd_ckpt_utils.py  sd_ckpt_vae_loader.py  sd_ckpt_version_check.py
deforum_storage/: singleton.py
engine/: model_check.py  sd_engine.py  settings.py  singleton.py
examples/: Deforum-Colab.ipynb  Deforum_Colab.ipynb
frontends/: deforum_cli.py
scripts/: make_video.py  make_video_faster.py  test.py
(+88 files in other folders)
