[metadata]
name = deforum
version = 0.7a

[options]
packages = find:
package_data =
    deforum = test/test.png
install_requires =
    einops==0.6.0
    numexpr==2.8.4
    matplotlib==3.7.1
    pandas==1.5.3
    av==10.0.0
    pims==0.6.1
    imageio-ffmpeg==0.4.8
    rich==13.3.2
    gdown==4.7.1
    py3d==0.0.87
    librosa==0.10.0.post2
    numpy==1.24.2
    opencv-contrib-python==4.7.0.72
    basicsr==1.4.2
    timm==0.6.13

[options.entry_points]
console_scripts =
    deforum = deforum.cmd:main
